--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "ecostream",
-  "name": "ecostream",
+  "name": "Buva Ecostream",
   "codeowners": ["@epodegrid"],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://www.home-assistant.io/integrations/ecostream",
   "homekit": {},
   "iot_class": "local_push",
-  "requirements": [],
+  "requirements": ["websocket-client==1.8.0"],
   "ssdp": [],
   "zeroconf": []
 }
