--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "domain": "ecostream",
   "name": "Buva Ecostream",
   "codeowners": ["@epodegrid"],
+  "version": "1.0.0",
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://www.home-assistant.io/integrations/ecostream",
