--- a/custom_components/ecostream/manifest.json
+++ b/custom_components/ecostream/manifest.json
@@ -1,14 +1,26 @@
 {
-  "domain": "ecostream",
-  "name": "Buva Ecostream",
-  "version": "1.0.0",
-  "codeowners": ["@epodegrid"],
-  "config_flow": true,
-  "dependencies": [],
-  "documentation": "https://www.home-assistant.io/integrations/ecostream",
-  "homekit": {},
-  "iot_class": "local_push",
-  "requirements": ["websocket-client==1.8.0"],
-  "ssdp": [],
-  "zeroconf": []
+   "domain":"ecostream",
+   "name":"Buva Ecostream",
+   "codeowners":[
+      "@epodegrid"
+   ],
+   "config_flow": true,
+   "dependencies":[
+      
+   ],
+   "documentation":"https://www.home-assistant.io/integrations/ecostream",
+   "homekit":{
+      
+   },
+   "iot_class":"local_push",
+   "requirements":[
+      "websocket-client==1.8.0"
+   ],
+   "ssdp":[
+      
+   ],
+   "version":"1.0.0",
+   "zeroconf":[
+      
+   ]
 }
