--- a/custom_components/ecostream/manifest.json
+++ b/custom_components/ecostream/manifest.json
@@ -13,6 +13,7 @@
       
    },
    "iot_class":"local_push",
+   "issue_tracker": "https://github.com/epodegrid/ecostream_homeassistant_integration/issues",
    "requirements":[
       "websocket-client==1.8.0"
    ],
