--- a/custom_components/ecostream/manifest.json
+++ b/custom_components/ecostream/manifest.json
@@ -1,27 +1,24 @@
 {
-   "domain":"ecostream",
-   "name":"Buva Ecostream",
-   "codeowners":[
+   "domain": "ecostream",
+   "name": "Buva Ecostream",
+   "codeowners": [
       "@epodegrid"
    ],
    "config_flow": true,
-   "dependencies":[
-      
-   ],
-   "documentation":"https://www.home-assistant.io/integrations/ecostream",
-   "homekit":{
-      
-   },
-   "iot_class":"local_push",
+   "dependencies": [],
+   "documentation": "https://www.home-assistant.io/integrations/ecostream",
+   "homekit": {},
+   "iot_class": "local_push",
    "issue_tracker": "https://github.com/epodegrid/ecostream_homeassistant_integration/issues",
-   "requirements":[
+   "requirements": [
       "websocket-client==1.8.0"
    ],
-   "ssdp":[
-      
-   ],
-   "version":"1.0.2",
-   "zeroconf":[
-      
+   "ssdp": [],
+   "version": "1.0.2",
+   "zeroconf": [
+      {
+         "type": "_http._tcp.local.",
+         "name": "ecostream*"
+      }
    ]
 }
