--- a/custom_components/ecostream/manifest.json
+++ b/custom_components/ecostream/manifest.json
@@ -6,7 +6,7 @@
    ],
    "config_flow": true,
    "dependencies": [],
-   "documentation": "https://www.home-assistant.io/integrations/ecostream",
+   "documentation": "https://github.com/epodegrid/ecostream_homeassistant_integration/blob/main/README.md",
    "homekit": {},
    "iot_class": "local_push",
    "issue_tracker": "https://github.com/epodegrid/ecostream_homeassistant_integration/issues",
